[gd_scene load_steps=17 format=2]

[ext_resource path="res://components/widgets/Dashboard.gd" type="Script" id=1]
[ext_resource path="res://assets/theme/Barlow-Medium.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/theme/dark_theme.tres" type="Theme" id=3]
[ext_resource path="res://assets/icon_delete.png" type="Texture" id=4]
[ext_resource path="res://assets/edit.png" type="Texture" id=5]
[ext_resource path="res://components/widgets/DashboardContainer.gd" type="Script" id=6]
[ext_resource path="res://components/widgets/NewWidgetPopup.tscn" type="PackedScene" id=7]
[ext_resource path="res://components/widgets/DateRangeSelector.tscn" type="PackedScene" id=8]
[ext_resource path="res://components/widgets/ComboBox.tscn" type="PackedScene" id=9]
[ext_resource path="res://assets/icon_tabs_close.png" type="Texture" id=10]

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="Shader" id=6]
code = "shader_type canvas_item;

uniform vec2 grid_size = vec2(100.0);
uniform vec2 margin_size = vec2(5.0);
uniform vec4 grid_color :  hint_color = vec4(0.14,0.14,0.2, 1.0);
uniform vec2 dashboard_size;
uniform float w = 1.0;

void fragment(){
	vec2 grid_px_size = grid_size;
	vec4 color = COLOR;
	vec2 coord_px = mod(UV *dashboard_size, grid_px_size);
	
	if (coord_px.x > grid_px_size.x - w || coord_px.y > grid_px_size.y - w){
		COLOR = grid_color;
	}
	if (coord_px.x > margin_size.x - w && coord_px.x < margin_size.x  || coord_px.y > margin_size.y - w && coord_px.y < margin_size.y ){
		COLOR = grid_color;
		COLOR.a *= 0.5;
	}
	if (coord_px.x > grid_px_size.x - margin_size.x - w && coord_px.x < grid_px_size.x - margin_size.x || coord_px.y > grid_px_size.y - margin_size.y - w &&  coord_px.y < grid_px_size.y - margin_size.y){
		COLOR = grid_color;
		COLOR.a *= 0.5;
	}
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 6 )
shader_param/grid_size = Vector2( 100, 100 )
shader_param/margin_size = Vector2( 0, 0 )
shader_param/grid_color = Color( 0.447059, 0.360784, 0.545098, 0.309804 )
shader_param/dashboard_size = Vector2( 1000, 1000 )
shader_param/w = 1.0

[node name="DashboardContainer" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
margin_right = 1920.0
margin_bottom = 49.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1910.0
margin_bottom = 39.0

[node name="DashboardNameLabel" type="LineEdit" parent="VBoxContainer/PanelContainer/HBoxContainer"]
margin_right = 1670.0
margin_bottom = 29.0
size_flags_horizontal = 3
custom_colors/font_color_uneditable = Color( 0.85098, 0.721569, 1, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/read_only = SubResource( 4 )
custom_styles/focus = SubResource( 7 )
custom_styles/normal = SubResource( 5 )
text = "Dashboard"

[node name="AddWidgetButton" type="Button" parent="VBoxContainer/PanelContainer/HBoxContainer"]
visible = false
margin_left = 1746.0
margin_right = 1775.0
margin_bottom = 29.0
rect_min_size = Vector2( 29, 29 )
size_flags_horizontal = 10
text = "+"

[node name="RefreshOptionButton" type="OptionButton" parent="VBoxContainer/PanelContainer/HBoxContainer"]
margin_left = 1674.0
margin_right = 1741.0
margin_bottom = 29.0
text = "15 min"
items = [ "15 min", null, false, 0, null, "30 min", null, false, 1, null, "1 hr", null, false, 2, null, "5 hr", null, false, 3, null, "12 hr", null, false, 4, null, "24 hr", null, false, 5, null ]
selected = 0

[node name="LockButton" type="Button" parent="VBoxContainer/PanelContainer/HBoxContainer"]
margin_left = 1745.0
margin_right = 1774.0
margin_bottom = 29.0
rect_min_size = Vector2( 29, 29 )
toggle_mode = true
icon = ExtResource( 5 )
expand_icon = true

[node name="DeleteButton" type="Button" parent="VBoxContainer/PanelContainer/HBoxContainer"]
margin_left = 1778.0
margin_right = 1807.0
margin_bottom = 29.0
rect_min_size = Vector2( 29, 29 )
icon = ExtResource( 4 )
expand_icon = true

[node name="ExportButton" type="Button" parent="VBoxContainer/PanelContainer/HBoxContainer"]
margin_left = 1811.0
margin_right = 1867.0
margin_bottom = 29.0
text = "Export"

[node name="CloseButton" type="Button" parent="VBoxContainer/PanelContainer/HBoxContainer"]
margin_left = 1871.0
margin_right = 1900.0
margin_bottom = 29.0
rect_min_size = Vector2( 29, 29 )
icon = ExtResource( 10 )
icon_align = 1
expand_icon = true

[node name="DateButton" type="Button" parent="VBoxContainer/PanelContainer"]
margin_left = 885.0
margin_top = 10.0
margin_right = 1035.0
margin_bottom = 39.0
rect_min_size = Vector2( 150, 0 )
size_flags_horizontal = 6
text = "Last 24 hours"

[node name="FiltersContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 53.0
margin_right = 1920.0
margin_bottom = 77.0
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/FiltersContainer"]
margin_left = 724.0
margin_top = 1.0
margin_right = 765.0
margin_bottom = 22.0
text = "Cloud"

[node name="CloudsCombo" parent="VBoxContainer/FiltersContainer" instance=ExtResource( 9 )]
margin_left = 769.0
margin_right = 869.0
items = [  ]

[node name="Label2" type="Label" parent="VBoxContainer/FiltersContainer"]
margin_left = 873.0
margin_top = 1.0
margin_right = 934.0
margin_bottom = 22.0
text = "Account"

[node name="AccountsCombo" parent="VBoxContainer/FiltersContainer" instance=ExtResource( 9 )]
margin_left = 938.0
margin_right = 1038.0
items = [  ]

[node name="Label3" type="Label" parent="VBoxContainer/FiltersContainer"]
margin_left = 1042.0
margin_top = 1.0
margin_right = 1092.0
margin_bottom = 22.0
text = "Region"

[node name="RegionsCombo" parent="VBoxContainer/FiltersContainer" instance=ExtResource( 9 )]
margin_left = 1096.0
margin_right = 1196.0
items = [  ]

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
margin_top = 81.0
margin_right = 1920.0
margin_bottom = 1080.0
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="Dashboard" type="Control" parent="VBoxContainer/ScrollContainer"]
margin_right = 1920.0
margin_bottom = 999.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="Grid" type="ColorRect" parent="VBoxContainer/ScrollContainer/Dashboard"]
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.12549, 0.0941176, 0.160784, 0 )

[node name="Widgets" type="Control" parent="VBoxContainer/ScrollContainer/Dashboard"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="References" type="Control" parent="VBoxContainer/ScrollContainer/Dashboard"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="WindowDialog" parent="." instance=ExtResource( 7 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -382.5
margin_top = -260.0
margin_right = 382.5
margin_bottom = 260.0

[node name="DateRangeSelector" parent="." instance=ExtResource( 8 )]
margin_left = 806.0
margin_top = 53.0
margin_right = 1094.0
margin_bottom = 285.0

[connection signal="text_entered" from="VBoxContainer/PanelContainer/HBoxContainer/DashboardNameLabel" to="." method="_on_DashboardNameLabel_text_entered"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/HBoxContainer/AddWidgetButton" to="." method="_on_AddWidgetButton_pressed"]
[connection signal="item_selected" from="VBoxContainer/PanelContainer/HBoxContainer/RefreshOptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="toggled" from="VBoxContainer/PanelContainer/HBoxContainer/LockButton" to="." method="_on_LockButton_toggled"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/HBoxContainer/DeleteButton" to="." method="_on_DeleteButton_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/HBoxContainer/ExportButton" to="." method="_on_ExportButton_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/HBoxContainer/CloseButton" to="." method="_on_CloseButton_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/DateButton" to="." method="_on_DateButton_pressed"]
[connection signal="option_changed" from="VBoxContainer/FiltersContainer/CloudsCombo" to="." method="_on_CloudsCombo_option_changed"]
[connection signal="option_changed" from="VBoxContainer/FiltersContainer/AccountsCombo" to="." method="_on_AccountsCombo_option_changed"]
[connection signal="option_changed" from="VBoxContainer/FiltersContainer/RegionsCombo" to="." method="_on_RegionsCombo_option_changed"]
[connection signal="resized" from="VBoxContainer/ScrollContainer/Dashboard/Grid" to="VBoxContainer/ScrollContainer/Dashboard" method="_on_Grid_resized"]
[connection signal="widget_added" from="WindowDialog" to="." method="_on_WindowDialog_widget_added"]
[connection signal="widget_added" from="WindowDialog" to="VBoxContainer/ScrollContainer/Dashboard" method="add_widget"]
[connection signal="range_selected" from="DateRangeSelector" to="." method="_on_DateRangeSelector_range_selected"]
